--- a/home/index.html
+++ b/home/index.html
@@ -143,64 +143,84 @@
 
   /* Sidebar (left) */
   .sidebar {
-    left: 0;
-    width: 100vw;
-    max-width: 320px;
-    padding-left: 0;
-    padding-right: 0;
-    transform: translateX(-100%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: fixed;
-    background-color: white;
-  }
+  left: 0;
+  width: 100vw;
+  max-width: 320px;
+  padding-left: 0;
+  padding-right: 0;
+  transform: translateX(-100%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  background-color: white;
+  height: 100vh;  /* Full height always */
+  top: 0;
+  z-index: 1700;
+  overflow-y: auto;
+  transition: transform 0.4s ease-in-out;
+}
 
-  .sidebar.open {
-    transform: translateX(0);
+.sidebar.open {
+  transform: translateX(0);
+}
+
+.sidebar nav {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-top: 0;
+  width: 100%;
+  max-width: 320px;
+  align-items: center;
+}
+
+.sidebar nav a {
+  color: black;
+  text-decoration: none;
+  font-size: 24px;
+  font-weight: 400;
+  text-align: center;
+  transition: color 0.3s ease, border-bottom 0.3s ease;
+  border-bottom: 2px solid transparent;
+  padding-bottom: 2px;
+  cursor: pointer;
+  position: relative;
+  user-select: none;
+  display: inline-block;
+  max-width: max-content;
+  margin: 0 auto;
+}
+
+.sidebar nav a:hover {
+  color: #333;
+  border-bottom-color: #333;
+}
+
+.sidebar nav a.current {
+  color: #666;
+  font-weight: 550;
+  border-bottom-color: #666;
+}
+
+.sidebar nav a.current:hover {
+  border-bottom-color: #aaa;
+}
+
+/* Full screen sidebar on mobile */
+@media (max-width: 768px) {
+  .sidebar {
+    max-width: 100vw; /* Full viewport width */
+    width: 100vw;
+    height: 100vh;    /* Full viewport height */
   }
 
   .sidebar nav {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    margin-top: 0;
+    max-width: 100vw; /* Make sure nav stretches full width */
     width: 100%;
-    max-width: 320px;
-    align-items: center;
+    padding: 0 16px;  /* Optional padding inside sidebar */
   }
-
-  .sidebar nav a {
-    color: black;
-    text-decoration: none;
-    font-size: 24px;
-    font-weight: 400;
-    text-align: center;
-    transition: color 0.3s ease, border-bottom 0.3s ease;
-    border-bottom: 2px solid transparent;
-    padding-bottom: 2px;
-    cursor: pointer;
-    position: relative;
-    user-select: none;
-    display: inline-block;
-    max-width: max-content;
-    margin: 0 auto;
-  }
-
-  .sidebar nav a:hover {
-    color: #333;
-    border-bottom-color: #333;
-  }
-
-  .sidebar nav a.current {
-    color: #666;
-    font-weight: 550;
-    border-bottom-color: #666;
-  }
-
-  .sidebar nav a.current:hover {
-    border-bottom-color: #aaa;
-  }
+}
 
   .arrow {
     position: absolute;
