--- a/home/index.html
+++ b/home/index.html
@@ -18,12 +18,14 @@
     font-family: 'Oswald', sans-serif;
     user-select: none;
     min-height: 100vh;
-}
+  }
 
   body.sidebar-open, body.cart-open {
     overflow: hidden;
+    height: 100vh;
     width: 100%;
-}  
+    touch-action: none;
+  }    
 
   header {
     position: absolute;
